force-app/main/default/objects/URL_Variable__c/URL_Variable__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>URL Variable</label>
</CustomObject>