force-app/main/default/objects/URL_Variable__c/fields/I_RS_ERA_Portal_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ERA_Portal_Base_URL__c</fullName>
    <description>Base portal for ERA Portal</description>
    <label>ERA Portal Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>