force-app/main/default/objects/URL_Variable__c/fields/I_RS_Internal_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Internal_Base_URL__c</fullName>
    <label>Internal Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>