force-app/main/default/objects/URL_Variable__c/fields/I_RS_Researcher_Portal_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Researcher_Portal_Base_URL__c</fullName>
    <description>Base URL of the PRIME Researcher Portal. Used for hyperlinking.</description>
    <label>Researcher Portal Base URL</label>
    <type>Url</type>
</CustomField>