force-app/main/default/objects/URL_Variable__c/fields/TRACR_Portal_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>TRACR_Portal_Base_URL__c</fullName>
    <label>TRACR Portal Base URL</label>
    <type>Url</type>
</CustomField>